--- a/dashcam/Views/RequestAuthorization/Camera/RequestCameraAuthorizationView.xib
+++ b/dashcam/Views/RequestAuthorization/Camera/RequestCameraAuthorizationView.xib
@@ -23,14 +23,9 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="camera" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="CPu-rk-IGH">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="camera" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="CPu-rk-IGH">
                     <rect key="frame" x="87" y="97" width="240" height="128"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="60" id="2pU-VW-yHN"/>
-                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="60" id="Gm8-WP-nqJ"/>
-                        <constraint firstAttribute="width" constant="60" id="o9e-AK-d8B"/>
-                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="sAN-Rp-L9j"/>
-                    </constraints>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Camera Authorization" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1q1-cJ-KfB">
                     <rect key="frame" x="76" y="270" width="262" height="34"/>
