--- a/dashcam/Views/RequestAuthorization/Camera/RequestCameraAuthorizationView.xib
+++ b/dashcam/Views/RequestAuthorization/Camera/RequestCameraAuthorizationView.xib
@@ -23,30 +23,35 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="camera" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="CPu-rk-IGH">
-                    <rect key="frame" x="87" y="97" width="240" height="128"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="camera" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="CPu-rk-IGH" userLabel="Camera Image View">
+                    <rect key="frame" x="177" y="193.5" width="60" height="58"/>
+                    <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="60" id="I4n-9O-aOm"/>
+                        <constraint firstAttribute="width" constant="60" id="vmi-WO-ixY"/>
+                    </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Camera Authorization" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1q1-cJ-KfB">
-                    <rect key="frame" x="76" y="270" width="262" height="34"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Camera Authorization" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1q1-cJ-KfB" userLabel="Title Label">
+                    <rect key="frame" x="76" y="283" width="262" height="34"/>
                     <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Please authorize the use of camera!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zqf-zR-pLd">
-                    <rect key="frame" x="71" y="312" width="272" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please authorize the use of camera!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zqf-zR-pLd" userLabel="Message Label">
+                    <rect key="frame" x="20" y="332" width="374" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
+                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Bo-Zg-NtE">
-                    <rect key="frame" x="179" y="360" width="57" height="30"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" systemColor="systemBlueColor"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Bo-Zg-NtE" userLabel="Action Button">
+                    <rect key="frame" x="167" y="382.5" width="80" height="50"/>
+                    <color key="backgroundColor" red="0.42972715736040612" green="0.42972715736040612" blue="0.42972715736040612" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="Djj-l4-SzX"/>
+                        <constraint firstAttribute="width" constant="80" id="svV-53-5F4"/>
+                    </constraints>
                     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <state key="normal" title="OK"/>
+                    <state key="normal" title="Allow"/>
                     <connections>
                         <action selector="actionButtonHandlerWithBtn:" destination="-1" eventType="touchUpInside" id="Msm-Ik-Wsr"/>
                     </connections>
@@ -54,6 +59,18 @@
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Zqf-zR-pLd" secondAttribute="trailing" constant="20" id="A9a-FH-FTO"/>
+                <constraint firstItem="7Bo-Zg-NtE" firstAttribute="top" secondItem="Zqf-zR-pLd" secondAttribute="bottom" constant="30" id="FuS-k9-yjU"/>
+                <constraint firstItem="1q1-cJ-KfB" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Gm7-BU-Ug1"/>
+                <constraint firstItem="7Bo-Zg-NtE" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="UZy-Hh-0Uy"/>
+                <constraint firstItem="Zqf-zR-pLd" firstAttribute="top" secondItem="1q1-cJ-KfB" secondAttribute="bottom" constant="15" id="afO-hd-Zo1"/>
+                <constraint firstItem="1q1-cJ-KfB" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="fXC-Yt-e1f"/>
+                <constraint firstItem="1q1-cJ-KfB" firstAttribute="top" secondItem="CPu-rk-IGH" secondAttribute="bottom" constant="30" id="kbU-s9-YRA"/>
+                <constraint firstItem="Zqf-zR-pLd" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="oRa-79-MN3"/>
+                <constraint firstItem="Zqf-zR-pLd" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="rmu-cp-4tz"/>
+                <constraint firstItem="CPu-rk-IGH" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="wLo-0y-SP7"/>
+            </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="50.724637681159422" y="23.4375"/>
         </view>
@@ -62,9 +79,6 @@
         <image name="camera" catalog="system" width="128" height="94"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemBlueColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
